--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Arthur's website</title>
 </head>
 <body>
-    <img src="Images\313932581_647372166877744_2121304351285305211_n-modified.png" height="500">
+    <img src="\Images\313932581_647372166877744_2121304351285305211_n-modified.png" height="500">
     <h1>Arthur Guillaume</h1>
     <p><em>Msc. Biomedical Sciences</em></p>
     <p>I am a data Scientist</p>
